Fix visibildiad breadcrumb en banderines decorativos

--- a/src/app/layout/toolbar/app.topbar.component.scss
+++ b/src/app/layout/toolbar/app.topbar.component.scss
@@ -152,7 +152,7 @@
 .banderines {
   position: fixed;
   /* o absolute si quieres que dependa de un contenedor */
-  // z-index: 100;
+  z-index: -1;
   top: 0;
   left: 0;
   width: 100%;
@@ -169,7 +169,7 @@
 .banderines_morado {
   position: fixed;
   /* o absolute si quieres que dependa de un contenedor */
-  // z-index: 100;
+  z-index: -1;
   top: 0;
   left: 0;
   width: 100%;
@@ -186,7 +186,7 @@
 .banderines_navidad {
   position: fixed;
   /* o absolute si quieres que dependa de un contenedor */
-  // z-index: 100;
+  z-index: -1;
   top: 0;
   left: 0;
   width: 100%;
